umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_pseudo_query.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 7
molecule_lenient:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 7
extended_molecule:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 7
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 8, col 0"
